--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,15 @@ dependencies:
   flutter_bloc:
   equatable:
   http:
+  firebase_storage: ^11.7.5
+  firebase_auth: ^4.19.5
+  cloud_firestore: ^4.17.3
+  fluttertoast: ^8.2.5
+  flutter_otp_text_field: ^1.1.3+2
+  get: ^4.6.6
+  line_awesome_flutter: ^3.0.1
+  video_player: ^2.8.6
+  chewie: ^1.8.1
 
 dev_dependencies:
   flutter_test:
@@ -66,3 +75,5 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/logo/
+    - assets/videos/
