second commit of the day
this is the second commit of the day on 6th jun 5:50pm

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   line_awesome_flutter: ^3.0.1
   video_player: ^2.8.6
   chewie: ^1.8.1
+  firebase_database: ^10.5.7
 
 dev_dependencies:
   flutter_test:
